--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
+    "bootstrap": "5.3.3",
     "chalk": "4.1.0",
     "js-cookie": "3.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hooks": "1.0.1",
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
-    "react-router-dom": "5.3.0"
+    "react-router-dom": "5.3.0",
+    "serve": "14.2.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
